Fix assigned staff on services maximum / overflow clipping

--- a/src/app/home/services/services.module.scss
+++ b/src/app/home/services/services.module.scss
@@ -98,6 +98,10 @@
 
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+
+  max-height: 80%;
+
 
   > div {
     @include globalutil.tooltip;
